[package]
edition = "2021"
name = "reflors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
serde = { version = "1.0.136", features = ["derive"], optional = true }
sys-info = "0.9.1"
unicode-width = "0.1.9"

[dev-dependencies]
pretty_assertions = "1.2.1"

[features]
default = []
serde = ["dep:serde", "bytes/serde"]
